@@ -22,6 +22,7 @@ import java.util.List;
 import java.util.Map;
 
 import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.POST;
@@ -107,7 +108,7 @@ public class SendDocumentService {
                 .filter(respondent -> !respondent.getValue().isDeceasedOrNFA())
                 .map(respondent -> respondent.getValue().getParty().toBuilder()
                         .address(getPartyAddress(respondent, caseData)).build())
-                .toList();
+                .collect(toList());
         }
 
         return emptyList();
